--- a/Alex/Alex/Info.plist
+++ b/Alex/Alex/Info.plist
@@ -55,6 +55,22 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>id6.me</key>
+			<string></string>
+			<key>cmpassport.com</key>
+			<string></string>
+			<key>mdn.open.wo.cn</key>
+			<string></string>
+			<key>wap.cmpassport.com</key>
+			<string></string>
+		</dict>
+	</dict>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
